# automated_testing_tp3

./: README.md  package.json  pyproject.toml  pytest.ini
core/: models.py  tests.py  urls.py  views.py
core/management/commands/: init_test_db.py
core/static/core/js/: validation.js  validation.test.js
core/templates/core/: form_detail.html
core/tests/: test_end_to_end.py
core/tests/front/: test_create_form.py  test_form_detail.py
form_builder/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: run_e2e_tests.sh
